--- a/src/css/main.css
+++ b/src/css/main.css
@@ -680,7 +680,7 @@ header Section
     nav{
         z-index: 99999999;
         top: 0;
-        position: fixed;
+        position: absolute;
         width: 100%;
         padding:  10px 0;
         /* filter: drop-shadow(0px 10px 10px white); */
