--- a/src/css/main.css
+++ b/src/css/main.css
@@ -80,7 +80,6 @@ section{
     width: 100%;
     height: 100%;
     z-index: 10;
-    /* margin: 0 120px; */
 }
 /* transparent section */
 #empty{
@@ -106,12 +105,22 @@ a{
         left: 0;
         display: none;
     }
+        /* slightly transparent fallback */
+    .backdrop-blur {
+        background-color: rgba(255, 255, 255, .9);
+    }
+    
+    /* if backdrop support: very transparent and blurred */
+    @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+        .backdrop-blur {
+        background-color: rgba(255, 255, 255, .5);
+        -webkit-backdrop-filter: blur(2em);
+        backdrop-filter: blur(2em);
+        }
+    }
     .nav-open > .container{
         display: flex;
         flex-direction: column;
-        /* justify-content: center;
-        align-items: center; */
-        /* background-color: #018BD4; */
     }
     .links{
         padding-top: 20px;
@@ -252,8 +261,9 @@ a{
         top: 0;
         background-color: rgba(0, 0, 0, 0.524);
         width: 100%;
-        height: 100%;
-        display: flex;
+        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
+        display: none;
     }
 
     .b-signup{
@@ -348,6 +358,7 @@ a{
         width: 100%;
         height: 100%;
         align-items: center;
+        display: none;
     }
     .sign_container{
         padding: 0 !important;
@@ -688,8 +699,6 @@ header Section
         /* pointer-events: none; */
     }
     .nav-container{
-        backdrop-filter: blur(10px);
-        background-color: rgba(255, 255, 255, 0.427);
         display: flex;
         padding: 10px !important;
         justify-content: space-between;
@@ -896,7 +905,6 @@ Hero Section
         font-family: Helvetica, sans-serif !important;
         padding-bottom: 10px;
         font-size: 2.5rem;
-        border-bottom: solid 3px white;
     }
     .bars_ > p{
         font-size: 1.1rem;
@@ -1013,7 +1021,7 @@ about section
 }
 .a_headline > h2 > span{
 
-    font-family: Yellowtail;
+    font-family: Yellowtail, sans-serif;
     color: var(------yellow);
 }
 .a_headline > h1 > span{
