--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,7 +36,9 @@ body{
     overflow-x: hidden;
 }
 p{
-    font-size: var(----x-small);
+    font-family: 'Inter' sans-serif !important;
+    font-weight: 100;
+    font-size: var(----small);
 }
 
 .deactivate-scroll{
@@ -297,9 +299,9 @@ a{
         font-size: var(----x-large);
         color: var(------blue);
     }
-    .sign-up-cont > div > p {
+    /* .sign-up-cont > div > p {
         font-size: var(----x-small);
-    }
+    } */
     .sign-up-cont > form {
         display: flex;
         flex-direction: column;
@@ -382,9 +384,9 @@ a{
         font-size: var(----x-large);
         color: var(------blue);
     }
-    .sign-up-cont > div > p {
+    /* .sign-up-cont > div > p {
         font-size: var(----x-small);
-    }
+    } */
     .sign-up-cont > form {
         display: flex;
         flex-direction: column;
@@ -536,10 +538,10 @@ textarea::placeholder{
     font-weight: bolder;
     color: var(------winish);
 }
-.below_ > p{
-    /* padding-bottom: 40px; */
+/* .below_ > p{
+    padding-bottom: 40px;
     font-size: var(---x-small);
-}
+} */
 
 .footer_links{
     display: flex;
@@ -709,7 +711,7 @@ header Section
     /* hamburger */
     
     .hamburger{
-        margin-right: auto;
+        /* margin-right: auto; */
         cursor: pointer;
         width: 30px;
         height: 30px;
@@ -782,11 +784,13 @@ header Section
         justify-content: center;
         width: 100%;
     }
-    
+    .eyes{
+        margin: 0 auto;
+    }
     /* hamburger */
     
     .hamburger{
-        margin-right: auto;
+        /* margin-right: auto; */
         cursor: pointer;
         min-width: 30px;
         height: 30px;
@@ -868,7 +872,7 @@ Hero Section
         align-items: center;
         gap: 20px;
         /* background-color: #018BD4; */
-        padding: 250px 0;
+        padding: 150px 0;
     }
     /* .hero_cta{
         background: linear-gradient(266.47deg, #E20789 1.15%, #FFF004 96.88%);
@@ -879,7 +883,6 @@ Hero Section
         max-width: 400px;
         text-align: center;
         font-weight: 100;
-        font-size: var(----x-small);
     }
     .hero_center > a{
         margin-top: 20px;
@@ -914,7 +917,7 @@ Hero Section
     .bars_ > p{
         font-size: 1.1rem;
         padding-top: 30px;
-        font-size: var(----x-small);
+        /* font-size: var(----x-small); */
         font-weight: 300;
     }
     .one_{
@@ -927,9 +930,23 @@ Hero Section
         border-radius: 0 0 40px 40px;
         background-color: var(------purple);
     }
+    .hero-bounce{
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: -5;
+        transform: rotate(10deg)translateX(300px)scale(1);
+    }
 }
 
 @media only screen and (min-width: 900px) {
+    .hero-bounce{
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: -5;
+        transform: rotate(10deg)translateX(30px)scale(1.2);
+    }
     #hero{
         display: flex;
         flex-direction: column;
@@ -968,7 +985,7 @@ Hero Section
     }
     .bars_ > p{
         padding-top: 30px;
-        font-size: var(----x-small);
+        /* font-size: var(----x-small); */
         font-weight: 300;
     }
     .one_{
@@ -1055,7 +1072,7 @@ about section
 .context > p{
     color: white;
     font-weight: 100;
-    font-size: var(----x-small);
+    /* font-size: var(----x-small); */
     line-height: 20px;
     text-align: center;
 }
@@ -1143,7 +1160,7 @@ about section
     .context > p{
         color: white;
         font-weight: 100;
-        font-size: var(----x-small);
+        /* font-size: var(----x-small); */
         max-width: 100%;
         line-height: 22px;
         text-align: left;
@@ -1377,6 +1394,11 @@ Programmes section
         transition: 300ms ease-in;
     }
 
+    .card:hover{
+        transform: scale(0.95)translateX(-20px)translateY(-20px);
+        box-shadow: inset 10px 10px 30px var(------purple-darker);
+    }
+
     .card > div > p{
         font-weight: 500;
     }
@@ -1384,10 +1406,6 @@ Programmes section
         background: url("/src/assets/images/img1.jpg");
         background-position: center;
         background-size: cover;
-    }
-    .card:hover{
-        transform: translateX(-20px)translateY(-20px);
-        filter: drop-shadow(10px 10px 0 var(------blue) ) ;
     }
     .card:nth-child(2){
         background: url("/src/assets/images/img2.jpg");
