--- a/src/css/main.css
+++ b/src/css/main.css
@@ -463,7 +463,7 @@ footer > .container{
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     height: 100%;
     padding-top: 50px;
@@ -572,8 +572,26 @@ textarea::placeholder{
     justify-items: center;
     align-items: center;
 }
+footer > .container > h1{
+    font-family: 'Barlow Condensed', sans-serif;
+    text-transform: uppercase;
+    color: #E20789;
+    font-size: 20rem;
+}
+.school_tag > p{
+    font-size: var(----x-small);
+}
+.anti_cipate{
+    overflow: hidden;
+}
+.anti_cipate_span{
+    display: flex;
+    width: 100%;
+    letter-spacing: -1rem;
+    /* background-color: #018BD4; */
+}
 /* desktop-view */
-@media screen and (min-width:900px) {
+/* @media screen and (min-width:900px) {
     #footer{
         z-index: 1;
         position: fixed;
@@ -590,7 +608,6 @@ textarea::placeholder{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 80px;
-        /* justify-content: center; */
     }
     .form_cont{
         order: 1;
@@ -611,7 +628,6 @@ textarea::placeholder{
         font-family: Inter, sans-serif;
     }
     textarea::placeholder{
-        /* font-family: Inter, sans-serif; */
         font-size: var(----small);
     }
     .form_cont > button{
@@ -627,7 +643,6 @@ textarea::placeholder{
         gap: 5px;
     }
     
-    /* break */
     
     .footer_about{
         min-width: 100%;
@@ -664,7 +679,6 @@ textarea::placeholder{
     .footer_links{
         display: flex;
         flex-direction: column;
-        /* align-self: center; */
         align-items: flex-start;
         gap: var(----small);
     }
@@ -686,13 +700,21 @@ textarea::placeholder{
         justify-items: center;
         align-items: center;
     }
-}
-
+}*/
 
 /* ---------
 header Section 
 ----------*/
 @media screen and (min-width:320px) {
+    footer > .container > h1{
+        font-size: 8rem;
+    }
+    .anti_cipate_span{
+        display: flex;
+        width: 100%;
+        letter-spacing: -0.4rem;
+        /* background-color: #018BD4; */
+    }
     nav{
         z-index: 99999999;
         top: 0;
@@ -736,7 +758,7 @@ header Section
         width: 25px;
         height: 2px;
         background-color: black;
-        background-color: var(------yellow);
+        /* background-color: var(------yellow); */
     }
     /* cta of nav */
     .cta_nav{
@@ -899,7 +921,7 @@ Hero Section
         border-radius: 50px;
         width: 80px;
         height: 35px;
-        background-color: white;
+        background-color: transparent;
     }
     .hero_center > p{
         max-width: 400px;
