there was a bug

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -248,6 +248,7 @@ a{
     .b-signup{
         display: flex;
         align-items: center;
+        justify-content: center;
         position: absolute;
         width: 100%;
         height: 100%;
